--- a/tecolotl-web/src/main/webapp/alumno/activity.xhtml
+++ b/tecolotl-web/src/main/webapp/alumno/activity.xhtml
@@ -28,21 +28,15 @@
 
         <div class="left-nav-wrap  uk-visible@xl ">
             <ul class="uk-thumbnav uk-thumbnav-vertical uk-position-center uk-margin-large-top">
-                <li uk-tooltip="title: Dashboard; pos: right"><h:link outcome="dashboard" ><h:graphicImage library="img" name="alumno/planetas/tierra.svg" width="80" alt=""/></h:link></li>
-                <li uk-tooltip="title: Activity; pos: right" class="uk-active" ><h:link outcome="tareas-alumno"><f:param name="idActividad" value="fs"/><f:param name="tarea" value="1"/><h:graphicImage library="img" name="alumno/planetas/planeta1.svg" width="80" alt="" /></h:link></li>
-                <li uk-tooltip="title: Glossary; pos: right" class="planetas"><h:link outcome="glosario-alumno" ><h:graphicImage library="img" name="alumno/planetas/planeta2.svg"  width="80" alt="" /></h:link></li>
-                <li uk-tooltip="title: Grammar; pos: right" class="planetas"><h:link outcome="transcrip-final"><h:graphicImage library="img" name="alumno/planetas/planeta3.svg"  width="80" alt="" /></h:link></li>
-                <li uk-tooltip="title: Map Mental; pos: right" class="planetas" ><h:link outcome="mapa-capas"><h:graphicImage library="img" name="alumno/planetas/planeta4.svg"  width="80" height="" alt="" /></h:link></li>
+                <li uk-tooltip="title: Dashboard; pos: right"><h:link outcome="dashboard"><h:graphicImage library="img" name="alumno/planetas/tierra.svg" width="80" alt=""/></h:link></li>
+                <li uk-tooltip="title: Activity; pos: right" class="uk-active" ><h:graphicImage library="img" name="alumno/planetas/planeta1.svg" width="80" alt="" /></li>
                 <li uk-tooltip="title: Library; pos: right"><h:link outcome="biblioteca-alumno"><h:graphicImage library="img" name="alumno/planetas/planeta5.svg"  width="80" alt="" /></h:link></li>
             </ul>
         </div>
         <div class="left-nav-wrap uk-position-relative  uk-hidden@xl ">
             <ul class="uk-thumbnav uk-thumbnav-vertical uk-position-top-center uk-margin-small-top">
                 <li uk-tooltip="title: Dashboard; pos: right" ><h:link outcome="dashboard" ><h:graphicImage library="img" name="alumno/planetas/tierra.svg"  width="50" alt=""/></h:link></li>
-                <li uk-tooltip="title: Activity; pos: right" class="uk-active"><h:link outcome="tareas-alumno"><f:param name="idActividad" value="fs"/><f:param name="idActividad" value="fs"/><f:param name="tarea" value="1"/><h:graphicImage library="img" name="alumno/planetas/planeta1.svg"  width="50" alt=""/></h:link></li>
-                <li uk-tooltip="title: Glossary; pos: right" class="planetas" ><h:link outcome="glosario-alumno" ><h:graphicImage library="img" name="alumno/planetas/planeta2.svg"  width="50" alt=""/></h:link></li>
-                <li uk-tooltip="title: Grammar; pos: right" class="planetas"><h:link outcome="transcrip-final"><h:graphicImage library="img" name="alumno/planetas/planeta3.svg"  width="50" alt=""/></h:link></li>
-                <li uk-tooltip="title: Map Mental; pos: right" class="planetas"><h:link outcome="mapa-capas"><h:graphicImage library="img" name="alumno/planetas/planeta4.svg"  width="50" alt=""/></h:link></li>
+                <li uk-tooltip="title: Activity; pos: right" class="uk-active"><h:graphicImage library="img" name="alumno/planetas/planeta1.svg"  width="50" alt=""/></li>
                 <li uk-tooltip="title: Library; pos: right"><h:link outcome="biblioteca-alumno"><h:graphicImage library="img" name="alumno/planetas/planeta5.svg"  width="50" alt=""/></h:link></li>
             </ul>
         </div>
@@ -50,11 +44,8 @@
     <ui:define name="contenido">
         <h:outputStylesheet library="css" name="navegacion.css"/>
         <h:outputStylesheet library="css" name="biblioteca.css"/>
-
         <div class="uk-container  margen-superior  padding-inferior">
-
             <div data-uk-filter="target: .js-filter">
-
                 <h:panelGroup layout="block" styleClass="uk-grid js-filter uk-margin-medium-top uk-margin-large-bottom" pt:uk-grid="">
                     <ui:repeat value="#{alumnoControlador.tareaActvidadModeloLista}" var="tareaActvidadModelo">
                         <h:panelGroup layout="block" styleClass="uk-width-1-3@m " pt:data-tags="a beautiful landscape - nature outdoor">
@@ -79,7 +70,6 @@
                                     <h:panelGroup layout="block"  styleClass="uk-inline">
                                         <div id="#{tareaActvidadModelo.idActividad}" class="videoPlayer">Hola</div>
                                     </h:panelGroup>
-                                    <!--                                    <div class="video-error"><h:graphicImage library="img" name="video-error.svg" width="120" height="120"/> </div>-->
                                 </div>
                                 <div class="uk-card-body">
                                     <h6 class="uk-margin-small-bottom uk-margin-remove-adjacent uk-text-bold uk-text-small">dato3</h6>
@@ -89,31 +79,22 @@
                                     <h:form>
                                         <h:panelGroup layout="block" styleClass="uk-grid uk-grid-small uk-grid-divider uk-flex uk-flex-middle" pt:data-uk-grid="">
                                             <div class="uk-width-expand ">
+                                                <h:commandLink action="#{alumnoControlador.seleccion(tareaActvidadModelo)}" value="realizar tarea"/>
                                                 <h:panelGroup layout="block" styleClass="uk-grid uk-grid-small uk-child-width-1-5" pt:uk-grid="">
                                                     <div>
-                                                        <h:commandLink action="#{alumnoControlador.seleccion(tareaActvidadModelo)}">
-                                                            <h:graphicImage pt:data-uk-tooltip="title: Listening" styleClass="uk-icon-image uk-svg" library="img" name="icono/listen.svg"/>
-                                                        </h:commandLink>
+                                                        <h:graphicImage pt:data-uk-tooltip="title: Listening" styleClass="uk-icon-image uk-svg" library="img" name="icono/listen.svg"/>
                                                     </div>
                                                     <div>
-                                                        <h:link action="#{alumnoControlador.seleccion(tareaActvidadModelo)}" outcome="">
-                                                            <h:graphicImage pt:data-uk-tooltip="title: Trasncript" styleClass="uk-icon-image uk-svg" library="img" name="icono/transcript1.svg" />
-                                                        </h:link>
+                                                        <h:graphicImage pt:data-uk-tooltip="title: Trasncript" styleClass="uk-icon-image uk-svg" library="img" name="icono/transcript1.svg" />
                                                     </div>
                                                     <div>
-                                                        <h:link action="#{alumnoControlador.seleccion(tareaActvidadModelo)}" outcome="">
-                                                            <h:graphicImage  pt:data-uk-tooltip="title: Reading" styleClass="uk-icon-image uk-svg " library="img" name="icono/reading.svg" />
-                                                        </h:link>
+                                                        <h:graphicImage  pt:data-uk-tooltip="title: Reading" styleClass="uk-icon-image uk-svg " library="img" name="icono/reading.svg" />
                                                     </div>
                                                     <div>
-                                                        <h:link action="#{alumnoControlador.seleccion(tareaActvidadModelo)}" outcome="">
-                                                            <h:graphicImage pt:data-uk-tooltip="title: Grammar" styleClass="uk-icon-image uk-svg " library="img" name="icono/gramatica.svg" />
-                                                        </h:link>
+                                                        <h:graphicImage pt:data-uk-tooltip="title: Grammar" styleClass="uk-icon-image uk-svg " library="img" name="icono/gramatica.svg" />
                                                     </div>
                                                     <div>
-                                                        <h:link action="#{alumnoControlador.seleccion(tareaActvidadModelo)}" outcome="">
-                                                            <h:graphicImage pt:data-uk-tooltip="title: Quiz" styleClass="uk-icon-image uk-svg " library="img" name="icono/quizcalifica.svg" />
-                                                        </h:link>
+                                                        <h:graphicImage pt:data-uk-tooltip="title: Quiz" styleClass="uk-icon-image uk-svg " library="img" name="icono/quizcalifica.svg" />
                                                     </div>
                                                 </h:panelGroup>
                                             </div>
@@ -123,7 +104,6 @@
                             </div>
                         </h:panelGroup>
                     </ui:repeat>
-
                 </h:panelGroup>
             </div>
         </div>
