--- a/tecolotl-web/src/main/webapp/alumno/select-mindmap.xhtml
+++ b/tecolotl-web/src/main/webapp/alumno/select-mindmap.xhtml
@@ -15,6 +15,7 @@
 
 <ui:composition template="/template/escolar/template-alumno.xhtml">
     <ui:define name="contenido">
+        <h:outputStylesheet library="css" name="/alumno/select-mindmap.css"/>
         <div class="uk-section margen-superior">
             <div class="uk-container padding-contenedor">
                 <ui:repeat value="#{seleccionMapaMentalControlador.mapaMentalResueltoModeloLista}" var="mapaMental">
@@ -24,19 +25,14 @@
                     </h:link>
                     Respondidos:#{mapaMental.totalResueltos}<br/>
                 </ui:repeat>
-                <div class="uk-card uk-card-default uk-grid-collapse uk-child-width-1-2@s uk-margin" uk-grid="">
-                    <div class="uk-card-media-left uk-cover-container">
-                        <img src="images/light.jpg" alt="" uk-cover=""/>
-                        <canvas width="600" height="400"></canvas>
-                    </div>
-                    <div>
-                        <div class="uk-card-body">
-                            <h3 class="uk-card-title">Media Left</h3>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt.</p>
-                        </div>
-                    </div>
-                </div>
+                <div  uk-grid="">
+                        <ui:repeat value="#{seleccionMapaMentalControlador.mapaMentalResueltoModeloLista}" var="mapaMental">
+                            <div class="card-mapa uk-width-1-3@m mapa-#{mapaMental.cardinalidad}">
 
+                            </div>
+                        </ui:repeat>
+
+                </div>
 
             </div>
         </div>
