animacion fondo quitado

--- a/tecolotl-web/src/main/webapp/alumno/select-mindmap.xhtml
+++ b/tecolotl-web/src/main/webapp/alumno/select-mindmap.xhtml
@@ -27,7 +27,7 @@
                 </ui:repeat>
                 <div  uk-grid="">
                         <ui:repeat value="#{seleccionMapaMentalControlador.mapaMentalResueltoModeloLista}" var="mapaMental">
-                            <div class="card-mapa uk-width-1-3@m mapa-#{mapaMental.cardinalidad}">
+                            <div class="card-mapa uk-width-1-3@m mapa-#{i}">
 
                             </div>
                         </ui:repeat>
