--- a/tecolotl-web/src/main/webapp/alumno/select-mindmap.xhtml
+++ b/tecolotl-web/src/main/webapp/alumno/select-mindmap.xhtml
@@ -15,7 +15,7 @@
 
 <ui:composition template="/template/escolar/template-alumno.xhtml">
     <ui:define name="contenido">
-        <h:outputStylesheet library="css" name="/alumno/select-mindmap.css"/>
+        <h:outputStylesheet library="css" name="/alumno/mapa-mental.css"/>
         <div class="uk-section margen-superior">
             <div class="uk-container padding-contenedor">
                 <ui:repeat value="#{seleccionMapaMentalControlador.mapaMentalResueltoModeloLista}" var="mapaMental">
